src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Pivotal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Framing</fullName>
        </values>
        <values>
            <fullName>Gain Sponsorship</fullName>
        </values>
        <values>
            <fullName>Identify Business Problems</fullName>
        </values>
        <values>
            <fullName>Negotiate %26 Close</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV_Total_IT__c</fullName>
        <description>Used to enable ACV Split Opp Forecasting (does not accept formula field) populated by Opp Handler Trigger</description>
        <label>ACV Total IT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_Total__c</fullName>
        <formula>Total_Forecasted_ACV__c  +  Total_RollupACV_from_prods__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Plan Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Since_Stage_1__c</fullName>
        <formula>TODAY() -  Stage_1_Date__c</formula>
        <label>Age Since Stage 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternative_Solution_to_Pivotal__c</fullName>
        <inlineHelpText>If not Pivotal, then how will they address this problem?</inlineHelpText>
        <label>Best Alternative to Pivotal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternatives_Strategy_to_Compete__c</fullName>
        <inlineHelpText>3. What is their alternative and our sales strategy to compete against it?</inlineHelpText>
        <label>Alternatives &amp; Strategy to Compete?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AppTx_Scoping_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the AppTx Scoping schedule been delivered to the customer?</inlineHelpText>
        <label>AppTx Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppTx_Scoping_Scheduled__c</fullName>
        <label>AppTx Scoping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Modernization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps-Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_or_Use_Case__c</fullName>
        <label>Application or Use Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>CASE(1, 
If ( CONTAINS(Text(  Approval_Status_picklist__c  ), "Approved"),1,0) , 
IMAGE("/resource/Approval_Status_images/Approved.png","approved"), 
If ( CONTAINS(Text(  Approval_Status_picklist__c  ), "In Progress"),1,0) , 
IMAGE("/resource/Approval_Status_images/pending.png","In progress"), 
If ( CONTAINS(Text(  Approval_Status_picklist__c  ), "Rejected"),1,0) , 
IMAGE("/resource/Approval_Status_images/rejected.png","Rejected"), 
IMAGE("/resource/Approval_Status_images/notsubmitted.png","other") 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status_picklist__c</fullName>
        <description>This is a hidden field where the field images will be based off this picklist field</description>
        <label>Approval Status picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apps_Greenfield_Legacy__c</fullName>
        <description>9.6.18 request from Billy Bob Brigmon to compare Apps-Greenfield and Apps-Legacy checkbox fields combined</description>
        <formula>IF(
(( Innovative_AppDev__c )=TRUE) || (( App_Modernization__c )=TRUE),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apps-Greenfield+Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT(Owner.Area__c)</formula>
        <label>Owner Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDS_Consumption_Milestone__c</fullName>
        <description>Link to URL for this opportunity's Consumption Plan.</description>
        <inlineHelpText>Please provide a URL to the account specific consumption plan that is being maintained for this opportunity. Default location should be the Account Dashboard.</inlineHelpText>
        <label>Data Consumption Milestone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BDS_Consumption_Validated_by_Tech_Lead__c</fullName>
        <inlineHelpText>A consumption plan has been validated by the defined tech lead.</inlineHelpText>
        <label>Data Consumption Validated by Tech Lead?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tech_Lead_Validation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDS_Primary_Influence__c</fullName>
        <inlineHelpText>Please fill out the primary product influencing this BDS opportunity</inlineHelpText>
        <label>Data Primary Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Pivotal GemFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal Greenplum</fullName>
                </value>
                <value>
                    <fullName>Pivotal HDB</fullName>
                </value>
                <value>
                    <fullName>Pivotal OSS Postgres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Manager__c</fullName>
        <formula>CASE(Owner.Region__c,

"Federal", "Brigitte Riviere", 
"AMER South", "Kathryn Fiske",
"AMER East", "Chris Braney", 
"AMER Central", "Chris Want",
"New England", "Chris Braney", 
"Canada", "Brigitte Riviere", 
"NY/NJ Global Financial Services", "Chris Braney", 
"NY/NJ 2", "Chris Braney", 
"NY/NJ 3", "Chris Braney", 
"Federal Civilian", "Brigitte Riviere",
"Federal DOD/Intel", "Brigitte Riviere", 
"Federal SIs", "Brigitte Riviere", 
"South CAT", "Kathryn Fiske", 
"Federal DoD/Intel", "Brigitte Riviere", 
"Mid-Atlantic", "Chris Braney", 
"TOLA", "Kathryn Fiske", 
"LATAM", "Brigitte Riviere", 
"South GAF", "Kathryn Fiske",

"AMER West", "Jayme Gorman", 
"Great Lakes", "Chris Want",
"Bay Area", "Jayme Gorman", 
"Pacific Southwest", "Jayme Gorman", 
"Mountain West", "Jayme Gorman",
"Central North", "Chris Want", 
"Central West", "Chris Want", 
"Global Partners", "Kathryn Smith",
"AMER Dell Synergy", "Chris Want", 

"APJ Other", "Greg Fenech",
"APJ Australia New Zealand", "Greg Fenech",
"APJ Greater China", "Greg Fenech",
"APJ Japan", "Greg Fenech",
"APJ Korea", "Greg Fenech",
"APJ South Asia", "Greg Fenech",
"APJ India", "Greg Fenech",
"APJ Southeast Asia", "Greg Fenech",

"EMEA South", "Marie Hennessy",
"EMEA France &amp; S Europe", "Marie Hennessy",
"EMEA France", "Marie Hennessy",
"EMEA Labs", "Marie Hennessy",
"EMEA Other", "Marie Hennessy",
"EMEA ISR", "Marie Hennessy",
"EMEA MEA", "Marie Hennessy",
"EMEA Emerging Other", "Marie Hennessy",
"EMEA UKI", "Marie Hennessy",
"EMEA UKI 1", "Marie Hennessy",
"EMEA UKI 2", "Marie Hennessy",
"EMEA Central FSI/Telco", "Marie Hennessy",
"EMEA Central Mfg/Chem/Pharma", "Marie Hennessy",
"EMEA Central NL/CH/Gov", "Marie Hennessy",
"EMEA South France", "Marie Hennessy",
"EMEA South Italy/Spain/Israel", "Marie Hennessy",
"EMEA South Middle East", "Marie Hennessy",
"EMEA UK FSI", "Marie Hennessy",
"EMEA UK General", "Marie Hennessy",
"EMEA UK Public Sector", "Marie Hennessy",

null)</formula>
        <label>Business Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Outcomes_KPI_s__c</fullName>
        <label>Business Outcomes/KPI's?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Opportunity_Addressing__c</fullName>
        <inlineHelpText>1. What business problems or opportunities are we addressing for the customer?</inlineHelpText>
        <label>Business Problem/Opportunity Addressing?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buy_Count_Closed__c</fullName>
        <inlineHelpText>This number is this opportunity's Buy (Putt) count related to the account it's on. This is only for closed/won opps.</inlineHelpText>
        <label>Buy Count (Closed)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Count_Open__c</fullName>
        <inlineHelpText>This is the buy count for this opportunity related to other opps (open and closed) on an account.</inlineHelpText>
        <label>Buy Count (Open)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer_priorities_how_measure_success__c</fullName>
        <inlineHelpText>2. Who is it important to and what are their priorities and how do they measure success?</inlineHelpText>
        <label>Buyer, priorities &amp; how measure success?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_steps_close_plan_money_source__c</fullName>
        <inlineHelpText>5. What buying steps must the customer go through, what is our closing plan to turn the opportunity into revenue and where will the money come from?</inlineHelpText>
        <label>Buying steps, close plan, money source?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSO__c</fullName>
        <label>CSO Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown - Discovery</fullName>
                    <label>1 - Unknown - Discovery</label>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                    <label>2 - Discovery</label>
                </value>
                <value>
                    <fullName>Project Identified</fullName>
                    <label>3 - Project Identified</label>
                </value>
                <value>
                    <fullName>Ready to Scope</fullName>
                    <label>4 - Ready to Scope</label>
                </value>
                <value>
                    <fullName>Scoped</fullName>
                    <label>5 - Scoped</label>
                </value>
                <value>
                    <fullName>Proposal Delivered (delayed)</fullName>
                    <label>6 - Proposal Delivered (delayed)</label>
                </value>
                <value>
                    <fullName>Proposal Delivered</fullName>
                    <label>7 - Proposal Delivered</label>
                </value>
                <value>
                    <fullName>Delivery Scheduled</fullName>
                    <label>8 - Delivery Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Enablement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Labs only. Tracks whether or not the opportunity is an Enablement opportunity.</description>
        <inlineHelpText>Labs only. Check off if the engagement is an Enablement project.</inlineHelpText>
        <label>Client Enablement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Liaison</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date_Last_Changed_Date__c</fullName>
        <description>populated by workflow rule</description>
        <label>Close Date Last Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <description>Used by Bookings Report and Bookings DB extract to mimic the Close Month function in SF reporting.</description>
        <formula>DATE(YEAR(CloseDate), MONTH(CloseDate), 1)</formula>
        <label>Close Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloud_Native_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Status_Notes__c</fullName>
        <label>Commercial Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Status__c</fullName>
        <label>Commercial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Terms Not Started Yet (default)</fullName>
                    <default>true</default>
                    <label>Commercial Terms Not Started Yet</label>
                </value>
                <value>
                    <fullName>Order Form / Quote/SOW Presented</fullName>
                </value>
                <value>
                    <fullName>Negotiation in Process</fullName>
                </value>
                <value>
                    <fullName>Commercial Terms Agreed</fullName>
                </value>
                <value>
                    <fullName>Waiting on Executed Documents for Processing</fullName>
                    <isActive>false</isActive>
                    <label>Waiting on Executed Documents for Processing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Container_Orchestration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Containers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Influence__c</fullName>
        <label>Federation Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>RSA</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Order_Processed__c</fullName>
        <label>Core Order Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
                <value>
                    <fullName>VMW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Rep__c</fullName>
        <label>Federation Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Services_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Services Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Received_Commercial_Paperwork__c</fullName>
        <label>Customer Received Commercial Paperwork</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Received_PPT_Proposal__c</fullName>
        <label>Customer Received PPT Proposal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Science_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Science Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Scoping_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Scoping_Date__c</fullName>
        <label>Data Scoping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Band__c</fullName>
        <formula>If(AND(Amount&gt;=0,Amount&lt;100000),"0-99K",
If(AND(Amount&gt;=100000, Amount&lt;500000),"100-499K",
If(AND(Amount&gt;=500000, Amount&lt;1000000),"500K-999K",
If(AND(Amount&gt;=1000000,Amount&lt;5000000),"1M-4.9M",
If(AND(Amount&gt;=5000000),"5M+","NONE")))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The value is based on the Opportunity amount</inlineHelpText>
        <label>Deal Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Partner__c</fullName>
        <label>Delivery Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Education and Entitlement delivery Primary resource</description>
        <label>Delivery Primary</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Delivery Primary Education and Enablement person.</errorMessage>
            <filterItems>
                <field>User.LastName</field>
                <operation>equals</operation>
                <value>Gern,Koledin,Barinek,Secrist,McFadden,Hendershot,Funk,Jumadi,Jenner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>EEDeliveryPrimary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Programming_Language__c</fullName>
        <label>Desired Programming Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ava</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Plan__c</fullName>
        <description>The URL to a corresponding Engagement Plan on a Google Sheet</description>
        <inlineHelpText>The URL to a corresponding Engagement Plan on a Google Sheet</inlineHelpText>
        <label>Engagement Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Field_Top_Acounts__c</fullName>
        <label>Field Top Acounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE Top Account</fullName>
                </value>
                <value>
                    <fullName>RD Top Account</fullName>
                </value>
                <value>
                    <fullName>Area Leader Top Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <description>Used by Bookings report and Bookings DB to mimic SF reporting constructs.</description>
        <formula>IF(CloseDate &lt; DATE(2017, 01, 01), 
(CASE(MONTH(CloseDate), 
1, "Q1", 
2, "Q1", 
3, "Q1", 
4, "Q2", 
5, "Q2", 
6, "Q2", 
7, "Q3", 
8, "Q3", 
9, "Q3", 
10, "Q4", 
11, "Q4", 
12, "Q4", 
"Unknown") + "-" + TEXT(YEAR(CloseDate))), 
IF(CloseDate &lt; DATE(2017, 02, 04), "Q1-2017", 
if( Fiscal_Year_Week__c &lt;= 13, "Q1-" + Fiscal_Year__c, 
if( Fiscal_Year_Week__c &lt;= 26, "Q2-" + Fiscal_Year__c, 
if( Fiscal_Year_Week__c &lt;= 39, "Q3-" + Fiscal_Year__c, 
if( Fiscal_Year_Week__c &lt;= 52, "Q4-" + Fiscal_Year__c, "Unknown"))))))</formula>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter_Start_Date__c</fullName>
        <label>Fiscal Quarter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start_Date__c</fullName>
        <defaultValue>Date(2017,2,4)</defaultValue>
        <label>Fiscal Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Week_Of_Quarter__c</fullName>
        <formula>MOD( Fiscal_Year_Week__c ,13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Week Of Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Week__c</fullName>
        <formula>MOD(FLOOR((CloseDate- Fiscal_Year_Start_Date__c )/7),52)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <defaultValue>"2018"</defaultValue>
        <label>Fiscal Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Management only field</inlineHelpText>
        <label>Management Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Deployment_Multi_Country_Tax__c</fullName>
        <inlineHelpText>Will this be a global deployment with possible multi-country tax implications? If so, will it be more then or less than 10% of the total sale?</inlineHelpText>
        <label>Global Deployment (Multi Country Use)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;10% multiple countries</fullName>
                </value>
                <value>
                    <fullName>&lt;10% outside contract country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the Opportunity has an attached quote</description>
        <label>HasQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hosting_Platform_Details__c</fullName>
        <description>Additional details to the Hosting Platform field.</description>
        <inlineHelpText>If you select "Other" for Hosting Platform, please fill in any details you can provide in this field.</inlineHelpText>
        <label>Hosting Platform Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting_Platform__c</fullName>
        <description>Tracks what hosting platform the Labs project will be built on (different than project platforms).</description>
        <inlineHelpText>Select what hosting platform the client currently uses. If you select "Other", please fill out the "Hosting Platform Details" field.</inlineHelpText>
        <label>Hosting Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Hosting Involved</fullName>
                </value>
                <value>
                    <fullName>PCF</fullName>
                </value>
                <value>
                    <fullName>Other CF</fullName>
                </value>
                <value>
                    <fullName>Client IT</fullName>
                </value>
                <value>
                    <fullName>PWS</fullName>
                </value>
                <value>
                    <fullName>PWSe</fullName>
                </value>
                <value>
                    <fullName>Public PaaS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISV_Partner_Level_of_Influence__c</fullName>
        <inlineHelpText>Executive Intro: Partner introduces Pivotal into influential stakeholder and customer and evangelizes our campaign
Co-Selling/Sell With: Partner is invested in the sales campaign with Pivotal.
Partner-Led: Partner is selling independently of Pivotal</inlineHelpText>
        <label>ISV Partner Level of Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Intro (Access)</fullName>
                </value>
                <value>
                    <fullName>Co-Selling/Sell With (Leverage)</fullName>
                </value>
                <value>
                    <fullName>Partner-Led (APJ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISV_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISV Partner?</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISV Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IaaS_Partner_Level_of_Influence__c</fullName>
        <label>IaaS Partner Level of Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Intro (Access)</fullName>
                </value>
                <value>
                    <fullName>Co-Selling/Sell With (Leverage)</fullName>
                </value>
                <value>
                    <fullName>Partner-Led (APJ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IaaS_Strategic_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IaaS/Strategic Partner?</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (IaaS/Strategic Partner?)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Services_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Services Attached</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>